<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingBottom="36dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:background="@drawable/dialog_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/str_add_player"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/add_player_title"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/player_name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_background_radius_16"
            android:hint="@string/str_input_player_name_hint"
            android:inputType="text"
            android:padding="5dp"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_player_title"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/warning_name"
            android:textColor="@color/cancel_red"
            android:visibility="gone"
            android:textSize="12sp"
            android:text="@string/str_warning_name"
            app:layout_constraintTop_toBottomOf="@id/player_name_input"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/confirm_button_background"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/str_confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/warning_name" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/cancel_button_background"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/str_cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/warning_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>